data/derived/comb/progs/unify/prog7938.ml.out
Characters 26-38:
  let _ = eval(Power(SumInts(VarX, VarY), VarY, VarX), -0.999999, 0.99999);;
                            ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
